Fixing spacing again

--- a/_sass/layout/_services.scss
+++ b/_sass/layout/_services.scss
@@ -4,11 +4,7 @@
 }
 
 .service-logo-container {
-  //height: 100px;
-  display: flex;
-  justify-content: center; /* Horizontally center */
-  align-items: center; /* Vertically center */
-  height: auto;
+  height: 400px;
 }
 
 .service-logo {
